use correct cursor pos for cond format formulas, fdo#52565

Change-Id: I4e270a8c8ee60a6ab9a3d3b717db2c1243a34e1d